--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   backend:
     build: .
     container_name: ${APP_HOST}
-    restart: unless-stopped
+    restart: always
     ports: 
       - ${APP_PORT}:3000
     depends_on:
